Dirty fix to align cards container correctly

--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -38,7 +38,7 @@ body {
 
 .cards-container {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   flex-direction: row;
 }
 
